--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@
 		<div class="hero">
 			<h1>PIP-Bryg Beer Company</h1>
 			<p>Discover the finest beers from our brewery</p>
-			<p>Lokal beer from Glostrup, Denmark</p>
-			<a href="#beers" class="btn">Shop Now</a>
+			<p>Lokal beer from Glostrup, Denmark</p> <br><br><br><br>
+			<div class="box">
+				<a href="#beers" class="btn">Shop Now</a> 
+			  </div>
 		</div>	
 	</section>
-
 
 	<section id="about">
 		<div class="container">
 			<h2><br><br><br>About Us</h2>
 			<p>We are a family-owned brewery located in the heart of town. Our passion for brewing has been passed down for generations, and we pride ourselves on producing only the finest beers using traditional techniques and the highest quality ingredients.</p>
-    <p>At PiPbryg Beer Company, we believe that beer is more than just a beverage—it’s a way of life. Our mission is to share our love of craft beer with the world and to create a community of beer enthusiasts who share our values of quality, tradition, and innovation.</p>
+    <p>At PiPBryg Beer Company, we believe that beer is more than just a beverage—it’s a way of life. Our mission is to share our love of craft beer with the world and to create a community of beer enthusiasts who share our values of quality, tradition, and innovation.</p>
     <p>Our commitment to quality starts with our ingredients. We use only the freshest hops, malted barley, and other ingredients sourced from local farmers and suppliers. Our brewing process is steeped in tradition, with each batch carefully crafted by hand to ensure the perfect balance of flavors and aromas.</p>
     <p>But we’re not just about tradition—we’re also dedicated to innovation. Our brewers are constantly experimenting with new techniques and ingredients to create exciting new flavors and styles of beer that push the boundaries of what’s possible.</p>
-    <p>Whether you’re a seasoned beer aficionado or just starting to explore the world of craft beer, we invite you to come visit us at PiPbryg Beer Company. Our taproom is the perfect place to relax with friends, enjoy some delicious beer, and experience the magic of craft brewing for yourself.</p>
+    <p>Whether you’re a seasoned beer aficionado or just starting to explore the world of craft beer, we invite you to come visit us at PIPBryg Beer Company. Our taproom is the perfect place to relax with friends, enjoy some delicious beer, and experience the magic of craft brewing for yourself.</p>
 			</div>
 	</section>
 
@@ -51,11 +52,12 @@
 			<h2><br><br><br>Our Beers</h2>
 			<div class="row">
 				<div class="col">
-					<div class="card">
+					<div class="card"> <br>
 						<img src="images/nr1.jpg" alt="HOLY BIRD - WINTHER ALE">
 						<div class="card-body">
 							<h3>HOLY BIRD - WINTHER ALE</h3>
-							<p>A hoppy beer with a bitter taste and citrus aroma. Perfect for pairing with spicy food.</p>
+							<p>Looking for a beer that embodies the spirit of the winter season? Look no further than Winter Ale, the perfect beer for those chilly nights and holiday celebrations. With its rich, full-bodied flavor and warming spices, Winter Ale is the ideal choice for anyone looking to add a touch of festive cheer to their drinking experience.</p>
+							<p>Whether you're looking for a beer to share with loved ones during holiday gatherings or simply a comforting drink to enjoy by the fire, Winter Ale is the perfect choice. So why wait? Embrace the spirit of the season and grab a cold Winter Ale today.</p>
 							<div class="price">40 DKK</div>
 							<a href="#" class="btn">Add to Cart</a>
 						</div>
@@ -66,7 +68,8 @@
 						<img src="images/nr3.jpg" alt="ENCAGED BIRD - PALE ALE">
 						<div class="card-body">
 							<h3>ENCAGED BIRD - PALE ALE</h3>
-							<p>A light, crisp beer with a refreshing taste. Pairs well with grilled food.</p>
+							<p>Introducing the perfect beer to welcome the spring season: Pale Ale! Our refreshing and crisp Pale Ale is the perfect choice for those looking to transition from the heavy, warming beers of winter to the lighter, brighter brews of spring.</p>
+							<p>Whether you're out for a picnic in the park or lounging on your porch on a warm evening, our Pale Ale is sure to hit the spot. So why wait? Grab a cold Pale Ale today and welcome the spring season in style!</p>
 							<div class="price">30 DKK</div>
 							<a href="#sorry" class="btn">Add to Cart </a>
 						</div>
@@ -77,7 +80,8 @@
 						<br><br><img src="images/nr2.jpg" alt="IMEPRIAL STOUT">
 						<div class="card-body">
 							<h3>IMEPRIAL STOUT</h3>
-							<p>A dark, rich beer with a creamy texture and chocolate notes. Perfect for pairing with desserts.</p>
+							<p>Looking for a beer that packs a punch and delivers a full-bodied, intense flavor? Look no further than our Imperial Stout! This bold and complex beer is perfect for those looking for a rich and satisfying drinking experience.
+								<p>Whether enjoyed on its own or paired with a variety of rich, savory dishes, our Imperial Stout is the perfect choice for those looking for a beer that is full of character and flavor. So why wait? Indulge your taste buds and experience the bold and delicious flavor of our Imperial Stout today!</p>
 							<div class="price">25 DKK</div>
 							<a href="#sorry.html"> Add to Cart <br> <br></a>
 						</div>
@@ -103,7 +107,7 @@
 
 <footer>
 	<div class="container">
-		<p>&copy; PIP-Bryg 2023 </p>
+		<p>&copy; PIPBryg 2023 </p>
 	</div>
 </footer>
 </body>
