--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>PIP-Bryg Beer Company</title>
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
-
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>PIP-Bryg Beer Company</title>
+		<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="style.css">
+		<style>
+			body {
+				background-image: url("Baggrund.png");
+				background-size: cover;
+				background-repeat: no-repeat;
+			}
+		</style>
+	</head>
+	<body>
 	<header>
 		<div class="container">
 			<nav class="navbar">
@@ -70,7 +76,7 @@
 							<h3>ENCAGED BIRD - PALE ALE</h3>
 							<p>Introducing the perfect beer to welcome the spring season: Pale Ale! Our refreshing and crisp Pale Ale is the perfect choice for those looking to transition from the heavy, warming beers of winter to the lighter, brighter brews of spring.</p>
 							<p>Whether you're out for a picnic in the park or lounging on your porch on a warm evening, our Pale Ale is sure to hit the spot. So why wait? Grab a cold Pale Ale today and welcome the spring season in style!</p>
-							<div class="price">30 DKK</div>
+							<br><div class="price">30 DKK</div>
 							<a href="#sorry" class="btn">Add to Cart </a>
 						</div>
 					</div>
