--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 						<br><br><img src="images/nr2.jpg" alt="IMEPRIAL STOUT">
 						<div class="card-body">
 							<h3>IMEPRIAL STOUT</h3>
-							<p>Looking for a beer that packs a punch and delivers a full-bodied, intense flavor? Look no further than our Imperial Stout! This bold and complex beer is perfect for those looking for a rich and satisfying drinking experience.
-								<p>Whether enjoyed on its own or paired with a variety of rich, savory dishes, our Imperial Stout is the perfect choice for those looking for a beer that is full of character and flavor. So why wait? Indulge your taste buds and experience the bold and delicious flavor of our Imperial Stout today!</p>
+							<p>Er du på udkig efter en øl, der giver dig en intens og fyldig smagsoplevelse? Så behøver du ikke lede længere end vores Imperial Stout! Denne kraftfulde og komplekse øl er perfekt til dig, der ønsker en rig og tilfredsstillende drikkeoplevelse.</p>
+
+								<p>Uanset om du nyder den alene eller i kombination med forskellige rige og smagfulde retter, er vores Imperial Stout det perfekte valg for dig, der søger en øl, der er fuld af karakter og smag. Så hvorfor vente? Forkæl dine smagsløg og oplev den dristige og lækre smag af vores Imperial Stout allerede i dag!</p>
 						
 						</div>
 	</section>
