--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Welcome to PIP-Bryg Beer Company, the premier craft brewery in Glostrup, Denmark. We offer a wide variety of delicious and unique beers made from the finest ingredients, using traditional brewing methods. Whether you're a beer enthusiast or just looking for a refreshing drink, we have something for everyone. Explore our range of beers and place your order today!">
+
 		<title>PIP-Bryg Beer Company</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
