--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Welcome to PIP-Bryg Beer Company, the premier craft brewery in Glostrup, Denmark. We offer a wide variety of delicious and unique beers made from the finest ingredients, using traditional brewing methods. Whether you're a beer enthusiast or just looking for a refreshing drink, we have something for everyone. Explore our range of beers and place your order today!">
-
 		<title>PIP-Bryg Beer Company</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
@@ -37,7 +36,7 @@
 		<div class="hero">
 			<h1>PIP Bryg</h1>
 			<br>
-			<p>Udforsk det udsøgte udvalg af øl, der er håndværket af vores bryggeri lige her i Glostrup, Danmark. Vi er stolte af at producere kun de fineste kvalitetsøl ved hjælp af lokale ingredienser og traditionelle bryggemetoder.</p>
+			<p>Udforsk det udsøgte udvalg af øl, der er håndværket af vores bryggeri lige her i Glostrup, Danmark. Vi er stolte af at producere de fineste kvalitetsøl ved hjælp af lokale ingredienser og traditionelle bryggemetoder.</p>
 			<p>Uanset om du er fan af humlede IPA'er, glatte stouts eller knasende lagers, har vi en øl, der vil tilfredsstille dine smagsløg. Vores passionerede bryggere bruger deres ekspertise til omhyggeligt at fremstille hver batch øl og sikre en perfekt balance af smag og aroma.</p> <br><br><br><br>
 			<div class="box">
 				
@@ -60,6 +59,7 @@
 	<section id="beers">
 		<div class="container">
 			<h2><br><br><br><br>Vores øl</h2>
+			<h3>Denne side er et udstillingsvindue for årstidens fineste øl. Bestillinger skal dog ske privat og ikke her på hjemmesiden.</h2>
 			<div class="row">
 				<div class="col">
 					<div class="card"> <br>
